# ecs-sandbox

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
.github/workflows/: cmake.yml
lib/GL/: gl3w.cpp  gl3w.h  gl_gen.py
lib/util/: sgl_attachment.cpp  sgl_attachment.hpp  sgl_audio.cpp  sgl_audio.hpp  sgl_audio_listener.cpp  sgl_audio_listener.hpp  sgl_audio_source.cpp  sgl_framebuffer.cpp  sgl_framebuffer.hpp  sgl_renderbuffer.cpp  sgl_renderbuffer.hpp  sgl_shader.cpp  sgl_shader.hpp  sgl_shader_uniform.cpp  sgl_shader_uniform.hpp  sgl_texture.cpp  sgl_texture.hpp
res/ai/: test.bhv
res/audio/music/: Tikibar_Mixer.opus
res/entitydefs/: fib.as
res/fonts/humble_fonts/: charset.txt  license.txt
res/glsl/2d/: billboard_frag.glsl  billboard_instance_frag.glsl  billboard_instance_vert.glsl  billboard_vert.glsl  font_frag.glsl  font_vert.glsl  screen_frag.glsl  screen_vert.glsl
res/glsl/debug/: lines_frag.glsl  lines_vert.glsl
res/glsl/primitives/: points_frag.glsl  points_geom.glsl  points_vert.glsl  primitive_frag.glsl  primitive_vert.glsl
res/glsl/proto/: decal_instance_frag.glsl  decal_instance_vert.glsl  isosurface_frag.glsl  isosurface_vert.glsl  lightvolume_instance_frag.glsl  lightvolume_instance_vert.glsl  model_multi_frag.glsl  model_multi_vert.glsl  simpleMesh_frag.glsl  simpleMesh_vert.glsl  terrain_frag.glsl  terrain_vert.glsl
res/glsl/raft/: model_frag.glsl  model_vert.glsl  water_frag.glsl  water_geom.glsl  water_vert.glsl
res/glsl/ui/: image_frag.glsl  image_vert.glsl  uvimage_frag.glsl  uvimage_vert.glsl  wireframe_frag.glsl  wireframe_vert.glsl
res/glsl/world/: floor_frag.glsl  floor_vert.glsl  waterplane_frag.glsl  waterplane_vert.glsl
res/images/ui/: gm_tower.aseprite
res/models/: floor.ply
res/models/raft/: barrelOpen.mtl  bedroll.mtl  bedrollPacked.mtl  box.mtl  boxOpen.mtl  fish.mtl  floor.mtl  grass.mtl  rockFlat.mtl  rockFlatGrass.mtl  signpost.mtl  structureBase.mtl  tentClosed.mtl  toolAxe.mtl  toolHoe.mtl  toolShovel.mtl  tree.mtl  treeFall.mtl  treeFallLarge.mtl  workbench.mtl  workbenchAnvil.mtl  workbenchGrind.mtl
res/models/world/: dungeon_floor.blend  dungeon_floor_wall1.blend  dungeon_floor_wall2_corner.blend  dungeon_floor_wall2_corner_nopillar.blend  dungeon_floor_wall2_opposite.blend  dungeon_floor_wall3_deadend.blend  dungeon_floor_wall3_downstairs.blend
res/scripts/: fib.lua  tower_scene.lua
res/scripts/engine/: config.lua  init.lua
res/scripts/entitydefs/: bat.lua
res/scripts/ffi/: World.lua
res/scripts/layout/: mainmenu.lua  splash.layout.lua  splash.lua  title.lua
res/scripts/modules/: Engine.lua  Terrain.lua  Vec3.lua  Yoga.lua
res/scripts/world/: mapgen.lua
scripts/: build.sh  generate_ecs_includes.py
src/: config.hpp.in  main.cpp
src/core/: Grid2D.hpp  World.cpp  World.hpp
src/core/AI/: BehaviorTree.hpp
src/core/Animation/: Animation.cpp  Animation.hpp
src/core/Assets/: AssetManager.cpp  AssetManager.hpp  IAssets.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp
src/core/Debug/: ImguiPresets.cpp  ImguiPresets.hpp
src/core/Engine/: Engine.cpp  Engine.hpp  EngineConfig.cpp  EngineConfig.hpp  IScene.hpp
src/core/GpuTerrain/: Chunk.cpp
src/core/Graphics/: GLState.hpp
src/core/ImprovedTerrain/: CSGTree.hpp  DynamicTerrain.cpp  DynamicTerrain.hpp  ISignedDistanceFunction.hpp  SparseGrid3D.cpp
src/core/IslandTerrain/: Polygonize.hpp  Terrain.hpp
src/core/Prefab/: IPrefab.hpp  NPCs.hpp
src/core/RenderObject/: Billboard.hpp  Camera.cpp  Camera.hpp  ChunkedWorld.cpp  Terminal.hpp
src/core/Script/: FFI.cpp  FFI.hpp
src/core/Terrain/: ChunkedTerrain.cpp  CubeMarcher.cpp  EdgeTable.txt  Terrain.cpp
src/core/UI/: DebugWidget.cpp  DebugWidget.hpp  IWidget.hpp  ImageWidget.cpp  ImageWidget.hpp  Layout.cpp  Layout.hpp
src/core/Util/: Benchmark.cpp  Benchmark.hpp  Blackboard.cpp  DeleteAssignAndCopy.hpp  File.cpp  File.hpp  Font.cpp  Math3d.cpp  Math3d.hpp  Random.cpp  Random.hpp
src/core/Window/: Screen.cpp  Window.cpp  Window.hpp
src/core/sgl/: sgl_attachment.cpp  sgl_audio.hpp  sgl_audio_listener.cpp  sgl_audio_source.cpp  sgl_framebuffer.cpp  sgl_renderbuffer.cpp  sgl_shader.cpp  sgl_shader.hpp  sgl_texture.cpp  sgl_texture.hpp
src/ecs/: components.hpp  events.hpp  systems.hpp
src/ecs/components/: CBehavior.hpp  CBillboard.hpp  CCamera.hpp  CDamageOverTime.hpp  CDecal.hpp  CDeletable.hpp  CExplosive.hpp  CGravity.hpp  CHealth.hpp  CJumpTimer.hpp  CKeyboardControllable.hpp  CModel.hpp  COrientation.hpp  COrientedTexture.cpp  COrientedTexture.hpp  CParticle.hpp  CPointLight.hpp  CPosition.hpp  CPressAway.hpp  CProjectile.hpp  CRunningToTarget.hpp  CSpawnPoint.hpp  CSphereCollider.hpp  CTerrainCollider.hpp  CTextureRegion.hpp  CVelocity.hpp
src/ecs/events/: DrawPrimitiveEvent.hpp  ExplosionEvent.hpp  GamepadConnectedEvent.hpp  HudTextEvent.hpp  KeyEvent.hpp  KillEntityEvent.hpp  LogEvent.hpp  MouseButtonEvent.hpp  PlaySoundEvent.hpp  TextInputEvent.hpp  WindowCloseEvent.hpp  WindowResizeEvent.hpp  WorldTextEvent.hpp
src/ecs/systems/: AISystem.cpp  AISystem.hpp  AudioSystem.cpp  AudioSystem.hpp  BaseRenderSystem.hpp  BaseUpdateSystem.hpp  BillboardLookAtCameraSystem.cpp  BillboardLookAtCameraSystem.hpp  BillboardRender.cpp  BillboardRender.hpp  BillboardRenderSystem.cpp  BillboardRenderSystem.hpp  CHealthbarRenderSystem.hpp  CharacterController.cpp  CharacterController.hpp  CharacterControllerSystem.cpp  CharacterControllerSystem.hpp  DamageSystem.cpp  DamageSystem.hpp  DecalRenderSystem.cpp  DecalRenderSystem.hpp  DespawnSystem.cpp  DespawnSystem.hpp  DistanceFunctionCollisionSystem.cpp  DistanceFunctionCollisionSystem.hpp  EntityDeleteSystem.cpp  EntityDeleteSystem.hpp  GravitySystem.cpp  GravitySystem.hpp  IRenderSystem.hpp  IUpdateSystem.hpp  (+24 more)
src/include/: Grid2D.hpp  Grid3D.hpp  World.hpp
src/scenes/: TestGameScene.cpp  TestGameScene.hpp
src/source/: Grid2D.cpp  Grid3D.cpp  World.cpp
website/building/: README.md  build_linux.md  build_windows.md
(+175 files in other folders)
